--- a/_posts/python/treemap/treemap.ipynb
+++ b/_posts/python/treemap/treemap.ipynb
@@ -4,51 +4,10 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Treemaps in Python"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 1,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "'1.8.8'"
-      ]
-     },
-     "execution_count": 1,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "import plotly\n",
-    "plotly.__version__"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "### Simple Example with Plotly and Squarify"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 2,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": [
-    "import plotly.plotly as py\n",
-    "import plotly.graph_objs as go\n",
-    "\n",
-    "import squarify"
+    "#### New to Plotly?\n",
+    "Plotly's Python library is free and open source! [Get started](https://plot.ly/python/getting-started/) by dowloading the client and [reading the primer](https://plot.ly/python/getting-started/).\n",
+    "<br>You can set up Plotly to work in [online](https://plot.ly/python/getting-started/#initialization-for-online-plotting) or [offline](https://plot.ly/python/getting-started/#initialization-for-offline-plotting) mode, or in [jupyter notebooks](https://plot.ly/python/getting-started/#start-plotting-online).\n",
+    "<br>We also have a quick-reference [cheatsheet](https://images.plot.ly/plotly-documentation/images/python_cheat_sheet.pdf) (new!) to help you get started!"
    ]
   },
   {
@@ -57,6 +16,7 @@
     "collapsed": true
    },
    "source": [
+    "#### Simple Example with Plotly and [Squarify](https://pypi.python.org/pypi/squarify)\n",
     "Define the coordinate system for the returned rectangles: these values will range from x to x + width and y to y + height.\n",
     "Then define your treemap values. The sum of the treemap values must equal the total area to be laid out (i.e. width `*` height). The values must be sorted in descending order and must be positive."
    ]
@@ -83,6 +43,11 @@
     }
    ],
    "source": [
+    "import plotly.plotly as py\n",
+    "import plotly.graph_objs as go\n",
+    "\n",
+    "import squarify\n",
+    "\n",
     "x = 0.\n",
     "y = 0.\n",
     "width = 100.\n",
@@ -94,7 +59,10 @@
     "rects = squarify.squarify(normed, x, y, width, height)\n",
     "\n",
     "# Choose colors from http://colorbrewer2.org/ under \"Export\"\n",
-    "color_brewer = ['rgb(166,206,227)','rgb(31,120,180)','rgb(178,223,138)','rgb(51,160,44)','rgb(251,154,153)','rgb(227,26,28)','rgb(253,191,111)','rgb(255,127,0)','rgb(202,178,214)','rgb(106,61,154)','rgb(255,255,153)','rgb(177,89,40)']\n",
+    "color_brewer = ['rgb(166,206,227)','rgb(31,120,180)','rgb(178,223,138)',\n",
+    "                'rgb(51,160,44)','rgb(251,154,153)','rgb(227,26,28)',\n",
+    "                'rgb(253,191,111)','rgb(255,127,0)','rgb(202,178,214)',\n",
+    "                'rgb(106,61,154)','rgb(255,255,153)','rgb(177,89,40)']\n",
     "shapes = []\n",
     "annotations = []\n",
     "counter = 0\n",
@@ -151,6 +119,14 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Reference\n",
+    "See https://plot.ly/python/reference/ for more information and chart attribute options or https://pypi.python.org/pypi/squarify for more information about squarify!"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 1,
    "metadata": {
@@ -185,16 +161,25 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "\u001b[33mYou are using pip version 7.1.0, however version 7.1.2 is available.\n",
-      "You should consider upgrading via the 'pip install --upgrade pip' command.\u001b[0m\n",
-      "Requirement already up-to-date: publisher in /Users/Chelsea/venv2.7/lib/python2.7/site-packages\n"
+      "Collecting publisher\n",
+      "  Using cached publisher-0.11.tar.gz\n",
+      "Installing collected packages: publisher\n",
+      "  Found existing installation: publisher 0.10\n",
+      "    Uninstalling publisher-0.10:\n",
+      "      Successfully uninstalled publisher-0.10\n",
+      "  Running setup.py install for publisher ... \u001b[?25l-\b \bdone\n",
+      "\u001b[?25hSuccessfully installed publisher-0.11\n",
+      "\u001b[33mYou are using pip version 8.0.3, however version 8.1.2 is available.\n",
+      "You should consider upgrading via the 'pip install --upgrade pip' command.\u001b[0m\n"
      ]
     },
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/Users/Chelsea/venv2.7/lib/python2.7/site-packages/publisher/publisher.py:53: UserWarning: Did you \"Save\" this notebook before running this command? Remember to save, always save.\n",
+      "/Library/Frameworks/Python.framework/Versions/2.7/lib/python2.7/site-packages/IPython/nbconvert.py:13: ShimWarning: The `IPython.nbconvert` package has been deprecated. You should import from nbconvert instead.\n",
+      "  \"You should import from nbconvert instead.\", ShimWarning)\n",
+      "/Library/Frameworks/Python.framework/Versions/2.7/lib/python2.7/site-packages/publisher/publisher.py:53: UserWarning: Did you \"Save\" this notebook before running this command? Remember to save, always save.\n",
       "  warnings.warn('Did you \"Save\" this notebook before running this command? '\n"
      ]
     }
@@ -208,12 +193,13 @@
     "! pip install publisher --upgrade\n",
     "import publisher\n",
     "publisher.publish(\n",
-    "    'treemap.ipynb', 'python/treemaps', 'Python Treemaps | plotly',\n",
+    "    'treemap.ipynb', 'python/treemaps/', 'Python Treemaps | plotly',\n",
     "    'How to make interactive treemap in Python with Plotly and Squarify. '\n",
     "    'An examples of a treemap in Plotly using Squarify.',\n",
+    "    title = 'Python Treemaps | plotly',\n",
     "    name = 'Treemaps',\n",
-    "    thumbnail='/images/treemap.png', language='python',\n",
-    "    page_type='example_index', has_thumbnail='true', display_as='chart_type', order=28)"
+    "    thumbnail='thumbnail/treemap.jpg', language='python',\n",
+    "    page_type='example_index', has_thumbnail='true', display_as='chart_type', order=8)"
    ]
   },
   {
@@ -242,7 +228,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython2",
-   "version": "2.7.9"
+   "version": "2.7.11"
   }
  },
  "nbformat": 4,
