--- a/_posts/python/tree-plot/tree-plot.ipynb
+++ b/_posts/python/tree-plot/tree-plot.ipynb
@@ -4,19 +4,22 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Tree-plots in Python"
+    "#### New to Plotly?\n",
+    "Plotly's Python library is free and open source! [Get started](https://plot.ly/python/getting-started/) by dowloading the client and [reading the primer](https://plot.ly/python/getting-started/).\n",
+    "<br>You can set up Plotly to work in [online](https://plot.ly/python/getting-started/#initialization-for-online-plotting) or [offline](https://plot.ly/python/getting-started/#initialization-for-offline-plotting) mode, or in [jupyter notebooks](https://plot.ly/python/getting-started/#start-plotting-online).\n",
+    "<br>We also have a quick-reference [cheatsheet](https://images.plot.ly/plotly-documentation/images/python_cheat_sheet.pdf) (new!) to help you get started!"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Make a tree-plot in Plotly with IGRAPH"
+    "#### Basic Tree-Plot in Plotly with [igraph](http://igraph.org/python/)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 10,
    "metadata": {
     "collapsed": false
    },
@@ -27,7 +30,7 @@
        "'0.7.1'"
       ]
      },
-     "execution_count": 38,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -45,12 +48,12 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#####Set Up Tree with igraph"
+    "#### Set Up Tree with [igraph](http://igraph.org/python/)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 11,
    "metadata": {
     "collapsed": true
    },
@@ -84,12 +87,12 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#####Create Plotly Traces"
+    "#### Create Plotly Traces"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 12,
    "metadata": {
     "collapsed": true
    },
@@ -120,12 +123,12 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#####Create text inside the circle via annotations"
+    "#### Create Text Inside the Circle via Annotations"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 13,
    "metadata": {
     "collapsed": true
    },
@@ -152,12 +155,12 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#####Add Axis Specifications and Create the Layout"
+    "#### Add Axis Specifications and Create the Layout"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 14,
    "metadata": {
     "collapsed": true
    },
@@ -182,8 +185,15 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Plot!"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 15,
    "metadata": {
     "collapsed": false
    },
@@ -191,13 +201,13 @@
     {
      "data": {
       "text/html": [
-       "<iframe id=\"igraph\" scrolling=\"no\" style=\"border:none;\"seamless=\"seamless\" src=\"https://plot.ly/~chelsea_lyn/10119.embed\" height=\"525px\" width=\"100%\"></iframe>"
+       "<iframe id=\"igraph\" scrolling=\"no\" style=\"border:none;\" seamless=\"seamless\" src=\"https://plot.ly/~chelsea_lyn/10119.embed\" height=\"525px\" width=\"100%\"></iframe>"
       ],
       "text/plain": [
        "<plotly.tools.PlotlyDisplay object>"
       ]
      },
-     "execution_count": 43,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -206,12 +216,20 @@
     "data=go.Data([lines, dots])\n",
     "fig=dict(data=data, layout=layout)\n",
     "fig['layout'].update(annotations=make_annotations(position, v_label))\n",
-    "py.iplot(fig, filename='Tree-Reingold-Tilf')\n"
+    "py.iplot(fig, filename='Tree-Reingold-Tilf')"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Reference\n",
+    "See https://plot.ly/python/reference/ for more information and chart attribute options and http://igraph.org/python/ for more information about the igraph package!"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 16,
    "metadata": {
     "collapsed": false
    },
@@ -244,15 +262,16 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Requirement already up-to-date: publisher in /Library/Frameworks/Python.framework/Versions/2.7/lib/python2.7/site-packages\r\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/Library/Frameworks/Python.framework/Versions/2.7/lib/python2.7/site-packages/publisher/publisher.py:53: UserWarning: Did you \"Save\" this notebook before running this command? Remember to save, always save.\n",
-      "  warnings.warn('Did you \"Save\" this notebook before running this command? '\n"
+      "Collecting git+https://github.com/plotly/publisher.git\n",
+      "  Cloning https://github.com/plotly/publisher.git to /var/folders/72/g6h98xwx0h1gp4kc8rzhsdh80000gn/T/pip-Vzt0xt-build\n",
+      "Installing collected packages: publisher\n",
+      "  Found existing installation: publisher 0.10\n",
+      "    Uninstalling publisher-0.10:\n",
+      "      Successfully uninstalled publisher-0.10\n",
+      "  Running setup.py install for publisher ... \u001b[?25l-\b \bdone\n",
+      "\u001b[?25hSuccessfully installed publisher-0.10\n",
+      "\u001b[33mYou are using pip version 8.0.3, however version 8.1.2 is available.\n",
+      "You should consider upgrading via the 'pip install --upgrade pip' command.\u001b[0m\n"
      ]
     }
    ],
@@ -262,15 +281,16 @@
     "display(HTML('<link href=\"//fonts.googleapis.com/css?family=Open+Sans:600,400,300,200|Inconsolata|Ubuntu+Mono:400,700\" rel=\"stylesheet\" type=\"text/css\" />'))\n",
     "display(HTML('<link rel=\"stylesheet\" type=\"text/css\" href=\"http://help.plot.ly/documentation/all_static/css/ipython-notebook-custom.css\">'))\n",
     "\n",
-    "! pip install publisher --upgrade\n",
+    "! pip install git+https://github.com/plotly/publisher.git --upgrade\n",
     "import publisher\n",
     "publisher.publish(\n",
-    "    'tree-plot.ipynb', 'python/tree-plots', 'Python Tree-plots | plotly',\n",
+    "    'tree-plot.ipynb', 'python/tree-plots/', 'Python Tree-plots | plotly',\n",
     "    'How to make interactive tree-plot in Python with Plotly. '\n",
     "    'An examples of a tree-plot in Plotly.',\n",
+    "    title = 'Python Tree-plots | plotly',\n",
     "    name = 'Tree-plots',\n",
     "    thumbnail='thumbnail/treeplot.jpg', language='python',\n",
-    "    page_type='example_index', has_thumbnail='true', display_as='chart_type', order=29)"
+    "    page_type='example_index', has_thumbnail='true', display_as='chart_type', order=9)"
    ]
   },
   {
