--- a/_posts/python/treemap/treemap.ipynb
+++ b/_posts/python/treemap/treemap.ipynb
@@ -161,14 +161,14 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Collecting publisher\n",
-      "  Using cached publisher-0.11.tar.gz\n",
+      "Collecting git+https://github.com/plotly/publisher.git\n",
+      "  Cloning https://github.com/plotly/publisher.git to /var/folders/72/g6h98xwx0h1gp4kc8rzhsdh80000gn/T/pip-K1NYjU-build\n",
       "Installing collected packages: publisher\n",
-      "  Found existing installation: publisher 0.10\n",
-      "    Uninstalling publisher-0.10:\n",
-      "      Successfully uninstalled publisher-0.10\n",
+      "  Found existing installation: publisher 0.11\n",
+      "    Uninstalling publisher-0.11:\n",
+      "      Successfully uninstalled publisher-0.11\n",
       "  Running setup.py install for publisher ... \u001b[?25l-\b \bdone\n",
-      "\u001b[?25hSuccessfully installed publisher-0.11\n",
+      "\u001b[?25hSuccessfully installed publisher-0.10\n",
       "\u001b[33mYou are using pip version 8.0.3, however version 8.1.2 is available.\n",
       "You should consider upgrading via the 'pip install --upgrade pip' command.\u001b[0m\n"
      ]
@@ -190,7 +190,7 @@
     "display(HTML('<link href=\"//fonts.googleapis.com/css?family=Open+Sans:600,400,300,200|Inconsolata|Ubuntu+Mono:400,700\" rel=\"stylesheet\" type=\"text/css\" />'))\n",
     "display(HTML('<link rel=\"stylesheet\" type=\"text/css\" href=\"http://help.plot.ly/documentation/all_static/css/ipython-notebook-custom.css\">'))\n",
     "\n",
-    "! pip install publisher --upgrade\n",
+    "! pip install git+https://github.com/plotly/publisher.git --upgrade\n",
     "import publisher\n",
     "publisher.publish(\n",
     "    'treemap.ipynb', 'python/treemaps/', 'Python Treemaps | plotly',\n",
